--- a/try2.html
+++ b/try2.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Heading area</h1>
         <h2>And then we have this change</h2>
+        <h3>Third change</h3>
     </body>
 </html> 
