--- a/try1.html
+++ b/try1.html
@@ -4,8 +4,8 @@
         <title>Trying</title>
     </head>
     <body>
-        <h1 style="color:blue">HI</h1>
-        Hey everybody, I am trying. And that's enough!!!!!
+        <h1>HI</h1>
+        Hey everybody, I am trying. And that's enough!!
         To me now.
     </body>
 </html> 
